Wip: Link and cache

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <p>Plone documentation — how to install, manage, use, and develop for Plone — is available at <a href="http://docs.plone.org">docs.plone.org</a>.</p><br>
                 <p> However, if you want to contribute to Plone Core you'll need to read our Process for <a href="http://docs.plone.org/develop/coredev/docs/index.html">Plone Core Development first</a>.</p>
 
-                <p>A read-only version of the old Subversion repository is available at <a href="https://svn.plone.org">svn.plone.org</a>. To download it (it's ~16 GB) visit <a href="https//archive.plone.org/svn">archive.plone.org/</a>.</p>
+                <p>A read-only version of the old Subversion repository is available at <a href="https://svn.plone.org">svn.plone.org</a>. To download it (it's ~16 GB) visit <a href="https//archive.plone.org">archive.plone.org/</a>.</p>
                 <p>The old static version of dev.plone.org, including old PLIPS and open issues, can be downloaded from <a href="https://archive.plone.org/olddev.plone.org/olddev.plone.org.tar.gz">archive.plone.org</a>.</p>
             </div>
         </div>
